--- a/embed_web_test.html
+++ b/embed_web_test.html
@@ -69,6 +69,7 @@
     <iframe src="https://dash.swarthmore.edu/menu/dining-center" width="500vw" height="600"></iframe>
     <iframe src="https://docs.google.com/spreadsheets/d/1z2vumLO5lT6qNP4FqgzQzb6jkzqtvClwPp8jTCTeobo/edit?usp=sharing" width="480" height="600" ></iframe>
 </h2>
+    <iframe src="https://tricotransit.rider.peaktransit.com/?all=1&center=39.978151,-75.340374&zoom=13" width="1000vw" height="600"></iframe>
     </div>
 <!--
     <iframe height="300" style="width: 25%;" scrolling="no" title="Random Gif Generator w/ Giphy API" src="https://codepen.io/ChynoDeluxe/embed/WGQzWW?default-tab=result&theme-id=dark" frameborder="yes" loading="lazy" allowtransparency="true" allowfullscreen="true">
